syntax = "proto3";
package kratos.api;

option go_package = "ito-deposit/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  message Jwt{
    string authkey = 1;
  }
  Jwt jwt = 3;
  message Pprof{
    int32  port = 1;
    bool switch = 2;
  }
  Pprof pprof = 4;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int64 db = 4;
  }
  Database database = 1;
  Redis redis = 2;
  string smscode = 3;
  message Minio{
    string endpoint = 1;
    string  access_key_id = 2;
    string access_key_secret = 3;
    string bucket_name = 4;
    bool use_ssl = 5;
    string bucket_url = 6;
  }
  Minio minio = 4;
}


